--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "16.4.1",
-    "react-native": "0.56.0",
+    "react": "16.3.1",
+    "react-native": "0.55.4",
+    "react-native-paper": "^1.11.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.2",
+    "react-navigation-fluid-transitions": "^0.2.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-persist": "4.8.2"
@@ -21,7 +24,7 @@
     "babel-jest": "23.4.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react-native": "^5",
+    "babel-preset-react-native": "4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-nibble": "^4.2.1",
