--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint src/"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
